<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lingxiao.resumeedit.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_medium"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/user_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/user_picture"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_text_size"
                    android:text="@string/name"/>

                <ImageButton
                    android:id="@+id/edit_basic_info"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:src="@drawable/ic_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginLeft="@dimen/spacing_xsmall"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name_layout"
                android:text="@string/email"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_large">
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/education"
                android:textAllCaps="true"
                android:textSize="@dimen/caption_text_size"/>

            <ImageButton
                android:id="@+id/add_education"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_18dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/education_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small"/>



        <LinearLayout
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_large">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/experience"
                android:textAllCaps="true"
                android:textSize="@dimen/caption_text_size"/>

            <ImageButton
                android:id="@+id/add_experience"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_18dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/experience_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/experience_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2010-2014    Zhejiang University"/>

                <ImageButton
                    android:id="@+id/edit_experience"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:src="@drawable/ic_edit_black_18dp"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/experience_duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_large">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/project"
                android:textAllCaps="true"
                android:textSize="@dimen/caption_text_size"/>

            <ImageButton
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:src="@drawable/ic_add_black_18dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/project_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/project_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2010-2014    Zhejiang University"/>

                <ImageButton
                    android:id="@+id/edit_project"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:src="@drawable/ic_edit_black_18dp"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/project_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
